--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <li><a href="#" onclick="loadPage('./content/daily-hotwater-change.html', this)">普力桶尺寸與夏季高溫換水應變方式</a></li>
             <li>夏季注意事項</li>
             <li><a href="#" onclick="loadPage('./content/daily-salt-guide.html', this)">下鹽</a></li>
-            <li><a href="https://michael19980508.github.io/MLE/" target="_blank">下鹽計算機</a></li>
-            <li><a href="https://michael19980508.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
+            <li><a href="https://taiwangoldfish.github.io/MLE/" target="_blank">下鹽計算機</a></li>
+            <li><a href="https://taiwangoldfish.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
             <li><a href="#" onclick="loadPage('./content/daily-travel-response.html', this)">出國出遠門應變措施</a></li>
             <li>出國回國魚缸經驗分享</li>
             <li>出國前操作-影片</li>
