--- a/simple/filter-why-dry.html
+++ b/simple/filter-why-dry.html
@@ -30,9 +30,9 @@
   <div class="section blue">
     <h3>🧽 正確做法</h3>
     <ul style="line-height:1.8; margin-left:20px;">
-      <li>保持濾材通風、不完全浸水。</li>
-      <li>濾水流經濾材後應能再落下形成氣泡。</li>
-      <li>每3個月更換全部濾材。</li>
+      <p>保持濾材通風、不完全浸水。</p>
+      <p>濾水流經濾材後應能再落下形成氣泡。</p>
+      <p>每3個月更換全部濾材。</p>
     </ul>
   </div>
 
