--- a/filter/2system.html
+++ b/filter/2system.html
@@ -6,7 +6,7 @@
     <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/二尺缸.jpg" 
          alt="二尺缸配置實例" 
          loading="lazy">
-    <div class="caption">圖片來源：MLE（金魚經驗分享）</div>
+    <div class="caption">圖片來源：金魚養殖經驗交流分享群</div>
   </div>
 
   <!-- 區塊1：配置總覽 -->
