--- a/feed/feed-storage.html
+++ b/feed/feed-storage.html
@@ -10,21 +10,25 @@
   </div>
 
   <!-- 說明文字 -->
-  <h3>🐠 飼料選擇</h3>
-  <ul style="line-height:1.8;">
-    <p>有品牌、有來源、有標示、有遮光。</p>
-    <p>有註記有效期限者皆可購買。</p>
-    <p>飼料盡量以半年內餵完為主。</p>
-  </ul>
+  <div class="section yellow">
+    <h3>🐠 飼料選擇</h3>
+    <ul style="line-height:1.8;">
+      <p>有品牌、有來源、有標示、有遮光。</p>
+      <p>有註記有效期限者皆可購買。</p>
+      <p>飼料盡量以半年內餵完為主。</p>
+    </ul>
+ </div>
 
+  <div class="section blue">
   <h3>🥶 飼料保存方式</h3>
-  <ul style="line-height:1.8;">
-    <p>能冰就冰，不能冰則放置陰涼且不悶熱的地方。</p>
-    <p>冷凍保存需快拿快放，避免長時間接觸空氣導致受潮。</p>
-    <p>增豔料含蝦紅素者能冷凍就冷凍，避免高溫破壞營養。</p>
-    <p>一般飼料冷藏保存即可。</p>
-  </ul>
-
+    <ul style="line-height:1.8;">
+      <p>能冰就冰，不能冰則放置陰涼且不悶熱的地方。</p>
+      <p>冷凍保存需快拿快放，避免長時間接觸空氣導致受潮。</p>
+      <p>增豔料含蝦紅素者能冷凍就冷凍，避免高溫破壞營養。</p>
+      <p>一般飼料冷藏保存即可。</p>
+    </ul>
+  </div>
+    
   <p style="text-align:center; color:#e8953c; font-weight:bold;">
     💧沒事多換水，多換水沒事💧
   </p>
