--- a/feed/feed-season.html
+++ b/feed/feed-season.html
@@ -12,16 +12,20 @@
   <!-- 說明文字 -->
   <p>💦 金魚和人一樣，在不同季節會有不同的代謝狀態：</p>
 
-  <ul style="line-height:1.8;">
-    <p><strong>夏季：</strong>氣溫高、代謝快、消化力強，餵食量可略多。</p>
-    <p><strong>冬季：</strong>氣溫低、代謝慢、活動力下降，餵食量需減少。</p>
-  </ul>
+  <div class="section yellow">
+    <ul style="line-height:1.8;">
+      <p><strong>夏季：</strong>氣溫高、代謝快、消化力強，餵食量可略多。</p>
+      <p><strong>冬季：</strong>氣溫低、代謝慢、活動力下降，餵食量需減少。</p>
+    </ul>
+  </div>
 
-  <h3>⏰ 餵食時機</h3>
-  <p>
-    餵食金魚的最佳時間為<strong>早晨</strong>，此時魚的活動力與代謝最旺盛；  
-    晚上則因代謝變慢，應避免大量餵食，以防腸道負擔。
-  </p>
+  <div class="section blue">
+    <h3>⏰ 餵食時機</h3>
+    <p>
+      餵食金魚的最佳時間為<strong>早晨</strong>，此時魚的活動力與代謝最旺盛；  
+      晚上則因代謝變慢，應避免大量餵食，以防腸道負擔。
+    </p>
+  </div>
 
   <p style="text-align:center; color:#e8953c; font-weight:bold;">
     💧順應季節調整餵食量，魚兒更健康💧
