--- a/feed/feed-recommend.html
+++ b/feed/feed-recommend.html
@@ -3,12 +3,14 @@
 
   <p>以下為金魚愛好者廣泛使用且口碑良好的品牌，適合日常飼養與健康維持：</p>
 
-  <ul style="line-height:1.8; font-size:1.05em;">
-    <p>🇯🇵 <strong>日本高夠力 Hikari</strong> — 經典穩定配方，腸胃適口性佳。</p>
-    <p>🇹🇼 <strong>台灣鮮蝦食譜 Ultra Fresh</strong> — 天然蝦紅素與高蛋白成分。</p>
-    <p>🇵🇱 <strong>波蘭德比克 Tropical</strong> — 多樣化飼料類型，適合不同魚齡。</p>
-    <p>🇩🇪 <strong>德國丹尼爾 Dennerle</strong> — 歐系高品質配方，水質穩定性高。</p>
-  </ul>
+  <div class="section yellow">
+    <ul style="line-height:1.8; font-size:1.05em;">
+      <p>🇯🇵 <strong>日本高夠力 Hikari</strong> — 經典穩定配方，腸胃適口性佳。</p>
+      <p>🇹🇼 <strong>台灣鮮蝦食譜 Ultra Fresh</strong> — 天然蝦紅素與高蛋白成分。</p>
+      <p>🇵🇱 <strong>波蘭德比克 Tropical</strong> — 多樣化飼料類型，適合不同魚齡。</p>
+      <p>🇩🇪 <strong>德國丹尼爾 Dennerle</strong> — 歐系高品質配方，水質穩定性高。</p>
+    </ul>
+  </div>
 
   <p style="text-align:center; color:#e8953c; font-weight:bold; margin-top:20px;">
     💧沒事多換水，多換水沒事💧
