--- a/content/daily-isolated-waterchange.html
+++ b/content/daily-isolated-waterchange.html
@@ -1,20 +1,22 @@
 <div class="card">
   <h2>🐟 隔離換水的用意</h2>
 
-  <p>換水讓魚康復的前提是<strong>讓魚自己的免疫能力發揮作用</strong>，盡量不要讓系統菌量影響魚況。</p>
-
-  <p>由於餵食消化需要耗費體力，所以期間應配合<strong>「禁食」</strong>，讓魚把能量盡量支配在免疫系統上。</p>
-
-  <p>把病魚隔離禁食、清空腸道、減少其他影響的因素，再配合下鹽，達到減滲透壓、降緊迫的輔助效果。</p>
-
-  <p>溫度建議以<strong>每天 1–2 度幅度升溫</strong>，提高到 27–28°C，  
-  有助於促進魚隻代謝、配合換水以去除代謝物與腸膜，維持良好水質。</p>
-
-  <div style="display:flex; justify-content:center; margin:25px 0;">
+    <div style="display:flex; justify-content:center; margin:25px 0;">
     <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/isolated-waterchange.png"
          alt="隔離換水的用意"
          loading="lazy"
          style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 12px rgba(0,0,0,0.25);">
+  </div>
+
+  <div class="section blue">
+    <p>換水讓魚康復的前提是<strong>讓魚自己的免疫能力發揮作用</strong>，盡量不要讓系統菌量影響魚況。</p>
+  
+    <p>由於餵食消化需要耗費體力，所以期間應配合<strong>「禁食」</strong>，讓魚把能量盡量支配在免疫系統上。</p>
+  
+    <p>把病魚隔離禁食、清空腸道、減少其他影響的因素，再配合下鹽，達到減滲透壓、降緊迫的輔助效果。</p>
+  
+    <p>溫度建議以<strong>每天 1–2 度幅度升溫</strong>，提高到 27–28°C，  
+    有助於促進魚隻代謝、配合換水以去除代謝物與腸膜，維持良好水質。</p>
   </div>
 
   <p style="text-align:center; font-size:1.1em; color:#e8953c;">
