--- a/filter/filter-system-3ft.html
+++ b/filter/filter-system-3ft.html
@@ -26,7 +26,7 @@
       <li><strong>馬達：</strong>博特 TA2-2500 一段式，搭配四分管。</li>
       <li><strong>燈具：</strong>萌蟲深紅 M3-80S +3。</li>
       <li><strong>打氣機：</strong>博特 QS-906，搭配超靜音圓形氣泡石。</li>
-      <li><strong>加溫棒：</strong>鋁力 500W，放置於濾下水處。</li>
+      <li><strong>加溫棒：</strong>鐳力 500W，放置於濾下水處。</li>
     </ul>
   </div>
 
