--- a/fish-problem/fish-dotcer.html
+++ b/fish-problem/fish-dotcer.html
@@ -1,6 +1,7 @@
 <div class="card">
   <h2 style="color:#dc2626; text-align:center;">‼️ 金魚有狀況</h2>
 
+<div class="section yellow">
   <div style="text-align:center; margin:25px 0;">
     <p style="font-size:1.05em; line-height:1.8;">
       若金魚出現異常行為、外觀變化或疑似疾病情況，<br>
@@ -14,9 +15,9 @@
         國立家畜衛生試驗所｜魚病防治資訊系統
       </a>
     </p>
-
+    </div>
+</div>
     <p style="margin-top:30px; color:#0284c7; font-weight:bold;">
       💧 沒事多換水，多換水沒事 💧
     </p>
-  </div>
 </div>
