--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
   <!-- 🪷 頁尾 -->
   <footer>
-    <p>© 2025 金魚養殖經驗交流分享社群 ｜ 網頁製作：MLE | 內容:金魚養殖經驗交流分享社群眾群管們</p>
+    <p>© 2025 金魚養殖經驗交流分享社群  | 內容:金魚養殖經驗交流分享社群眾群管們  ｜ 網頁製作：MLE/p>
   </footer>
 
   <!-- ⚙️ JS 控制 -->
