--- a/content/daily-cloudy-water.html
+++ b/content/daily-cloudy-water.html
@@ -9,11 +9,15 @@
          style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
   </div>
 
-  <!-- 影片 -->
+  <!-- YouTube Shorts 影片 -->
   <div style="text-align:center; margin:25px 0;">
-    <video controls width="90%" style="border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
-      <source src="https://raw.githubusercontent.com/michael19980508/index/main/image/換水還會霧.mp4" type="video/mp4">
-      您的瀏覽器不支援影片播放。
-    </video>
+    <iframe width="90%" height="500"
+            style="border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);"
+            src="https://www.youtube.com/embed/_iZ1YBm2qLM"
+            title="YouTube Shorts video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+    </iframe>
   </div>
 </div>
