--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#" onclick="loadPage('./simple/basic-simplify.html', this)">簡化養金魚方式</a></li>
             <li><a href="#" onclick="loadPage('./simple/basic-thinking.html', this)">養魚的思考</a></li>
             <!-- 影片18 -->
-            <li>溝通的問題</li>
+            <li><a href="#" onclick="loadPage('./simple/connection.html', this)">溝通的問題</a></li>
             <li><a href="#" onclick="loadPage('./simple/basic-care.html', this)">金魚基本飼養方式及配備</a></li>
             <li>新手必看視頻</li>
             <li>為什麼要換水</li>
