--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#" onclick="loadPage('./simple/connection.html', this)">溝通的問題</a></li>
             <li><a href="#" onclick="loadPage('./simple/basic-care.html', this)">金魚基本飼養方式及配備</a></li>
             <li><a href="#" onclick="loadPage('./simple/freshman_need.html', this)">新手必看影片</a></li>
-            <li>為什麼要換水</li>
+            <li><a href="#" onclick="loadPage('./simple/why-change-water.html', this)">為什麼要換水</a></li>
             <li><a href="#" onclick="loadPage('./simple/water-cost.html', this)">水費貴嗎</a></li>
             <li>打氣機的作用</li>
             <!-- 影片12 -->
