--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#" onclick="loadPage('./simple/fish-methods.html', this)">養魚方法真的百百種嗎</a></li>
             <li>魚友經驗分享</li>
             <!-- 影片11 -->
-            <li>金魚養殖鑑古推今</li>
+            <li><a href="#" onclick="loadPage('./simple/past-future.html', this)">金魚養殖鑑古推今</a></li>
             <li><a href="#" onclick="loadPage('./simple/goldfish-shops.html', this)">金魚店推薦</a></li>
           </ul>
         </li>
