--- a/simple/filter-why-dry.html
+++ b/simple/filter-why-dry.html
@@ -2,12 +2,17 @@
   <h2>🧱 濾材為什麼不要泡水？</h2>
 
   <!-- 🎬 教學影片 -->
-  <div class="media-box">
-    <video controls loading="lazy">
-      <source src="https://raw.githubusercontent.com/michael19980508/index/main/image/濾材為什麼不要泡水.mp4" type="video/mp4">
-      您的瀏覽器不支援影片播放。
-    </video>
-    <div class="caption">影片說明：濾材泡水會導致氣阻與菌群崩解，影響過濾效率。</div>
+ <h3 style="color:#e8953c; margin-top:30px;">🎥 濾材為什麼不要泡水？</h3>
+  <!-- YouTube Shorts 影片 -->
+  <div style="text-align:center; margin:25px 0;">
+    <iframe width="90%" height="500"
+            style="border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);"
+            src="https://www.youtube.com/embed/RDy9V085e6M"
+            title="YouTube Shorts video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+    </iframe>
   </div>
 
   <!-- 🖼️ 示意圖片 -->
