--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul>
             <li><a href="#" onclick="loadPage('./buyfish/new-fish-tank-intro.html', this)">新魚入缸知識</a></li>
             <li><a href="#" onclick="loadPage('./buyfish/quarantine-tips.html', this)">檢疫新魚重點</a></li>
-            <li>檢疫篇</li>
+            <li><a href="#" onclick="loadPage('./buyfish/quarantine.html', this)">檢疫篇</a></li>
             <li>檢疫的重要性</li>
             <li><a href="#" onclick="loadPage('./buyfish/quarantine-tool.html', this)">金魚檢疫必備品</a></li>
             <li>養魚從買魚開始1 基本判斷</li>
