--- a/filter/filter-flow-principle.html
+++ b/filter/filter-flow-principle.html
@@ -21,7 +21,7 @@
     <h3 style="color:#e8953c; margin-top:30px;">📸 水流導向</h3>
     <!-- 📸 示意圖片 -->
     <div style="display:flex; justify-content:center; margin:25px 0;">
-      <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/過濾水流原理.jpg"
+      <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/水流導向.jpg"
            alt="過濾與水流導向示意圖"
            loading="lazy"
            style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
