--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li><a href="https://taiwangoldfish.github.io/MLE/" target="_blank">下鹽計算機</a></li>
             <li><a href="https://taiwangoldfish.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
             <li><a href="#" onclick="loadPage('./content/daily-travel-response.html', this)">出國出遠門應變措施</a></li>
-            <li>出國回國魚缸經驗分享</li>
+            <li><a href="#" onclick="loadPage('./content/daily-travel-experience.html', this)">出國回國魚缸經驗分享</a></li>
             <li><a href="#" onclick="loadPage('./content/before-travel.html', this)">出國前操作-影片</a></li>
             <li><a href="#" onclick="loadPage('./content/after-travel.html', this)">回國後操作-影片</a></li>
             <li><a href="#" onclick="loadPage('./content/after-travel.html', this)">颱風天的養魚對應措施</a></li>
