--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <nav>
       <ul>
         <!-- 首頁 -->
-        <span><a href="https://taiwangoldfish.github.io/index/">🏠 首頁</a></span>
+        <li><span><a href="https://taiwangoldfish.github.io/index/">🏠 首頁</a></span></li>
 
         <!-- 🧡 入門篇 -->
         <li>
