--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>金魚養殖經驗交流分享｜Goldfish Guide</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body class="home">
 
   <!-- 📱 手機版選單按鈕 -->
   <button class="menu-toggle" id="menuToggle">☰ 選單</button>
@@ -17,28 +19,29 @@
 
     <nav>
       <ul>
-        <!-- 首頁 -->
-        <span><a href="https://taiwangoldfish.github.io/index/">首頁</a></span>
+
+        <!-- ⭐ 改成明顯首頁按鈕 -->
+        <li>
+          <a href="https://taiwangoldfish.github.io/index/" class="home-btn">🏠 首頁</a>
+        </li>
+
         <!-- 🧡 入門篇 -->
         <li>
           <span>🐟 入門篇</span>
           <ul>
             <li><a href="#" onclick="loadPage('./simple/basic-simplify.html', this)">簡化養金魚方式</a></li>
             <li><a href="#" onclick="loadPage('./simple/basic-thinking.html', this)">養魚的思考</a></li>
-            <!-- 影片18 -->
             <li><a href="#" onclick="loadPage('./simple/connection.html', this)">溝通的問題</a></li>
             <li><a href="#" onclick="loadPage('./simple/basic-care.html', this)">金魚基本飼養方式及配備</a></li>
             <li><a href="#" onclick="loadPage('./simple/freshman_need.html', this)">新手必看影片</a></li>
             <li><a href="#" onclick="loadPage('./simple/why-change-water.html', this)">為什麼要換水</a></li>
             <li><a href="#" onclick="loadPage('./simple/water-cost.html', this)">水費貴嗎</a></li>
             <li><a href="#" onclick="loadPage('./simple/bump-flection.html', this)">打氣機的作用</a></li>
-            <!-- 影片12 -->
             <li><a href="#" onclick="loadPage('./simple/filter-problem', this)">濾材問題</a></li>
             <li><a href="#" onclick="loadPage('./simple/filter-chose', this)">濾材的選擇</a></li>
             <li><a href="#" onclick="loadPage('./simple/filter-why-dry.html', this)">濾材為什麼不要泡水</a></li>
             <li><a href="#" onclick="loadPage('./simple/fish-methods.html', this)">養魚方法真的百百種嗎</a></li>
             <li><a href="#" onclick="loadPage('./simple/fish-experience.html', this)">魚友經驗分享</a></li>
-            <!-- 影片11 -->
             <li><a href="#" onclick="loadPage('./simple/past-future.html', this)">金魚養殖鑑古推今</a></li>
             <li><a href="#" onclick="loadPage('./simple/goldfish-shops.html', this)">金魚店推薦</a></li>
           </ul>
@@ -81,7 +84,7 @@
             <li><a href="#" onclick="loadPage('./buyfish/quarantine-tool.html', this)">金魚檢疫必備品</a></li>
             <li><a href="#" onclick="loadPage('./buyfish/basic-judgment.html', this)">養魚從買魚開始1 基本判斷</a></li>
             <li><a href="#" onclick="loadPage('./buyfish/quarantine-principle.html', this)">養魚從買魚開始2 檢疫原理</a></li>
-            <li><a href="#" onclick="loadPage('./buyfish/do-not-Being-played-for-suckers.html', this)">養魚從買魚開始3 我不是韭菜大作戰</a></li>
+            <li><a href="#" onclick="loadPage('./buyfish/do-not-Being-played-for-suckers.html', this)">我不是韭菜大作戰</a></li>
             <li><a href="#" onclick="loadPage('./buyfish/fish-stays-at-the-bottom-of-the-tank.html', this)">魚趴案例</a></li>
             <li><a href="#" onclick="loadPage('./buyfish/how-to-turn-gills.html', this)">如何翻鰓</a></li>
             <li><a href="#" onclick="loadPage('./buyfish/quarantine-without-filter-material.html', this)">無濾材檢疫全紀錄</a></li>
@@ -119,39 +122,17 @@
           </ul>
         </li>
 
-        <!-- 📚 過濾配置 -->
-        <li>
-          <span>📚 過濾配置</span>
-          <ul>
-            <li><a href="#" onclick="loadPage('./filter/nitrifying.html', this)">硝化菌篇</a></li>
-            <li><a href="#" onclick="loadPage('./filter/biofilter.html', this)">陶瓷環對比圖</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-volume.html', this)">濾材量的知識點</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-absorption.html', this)">濾材吸水量測試</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-flow-principle.html', this)">過濾和濾材水流原理 & 水流導向</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-system.html', this)">滴流盒與過濾系統配置/過濾更換細節</a></li>
-            <li><a href="#" onclick="loadPage('./filter/2system.html', this)">滴流盒與二尺缸配置</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-system-3ft.html', this)">三尺缸上部過濾配置</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-system-3ft-bottom.html', this)">三尺底濾改乾濕分離配置</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-system-4ft.html', this)">四尺缸上部過濾配置</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-system-4ft-bottom.html', this)">四尺底濾改乾濕分離配置</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-system-5ft.html', this)">五尺缸配置實例</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-7ft.html', this)">七尺缸配置實例</a></li>
-            <li><a href="#" onclick="loadPage('./filter/filter-aba.html', this)">雅柏上部過濾</a></li>
-          </ul>
-        </li>
-
         <!-- ⚠️ 魚病與健康 -->
         <li>
           <span>‼️ 金魚有狀況</span>
           <ul>
             <li><a href="#" onclick="loadPage('./fish-problem/fish-dotcer.html', this)">魚顧問</a></li>
             <li><a href="#" onclick="loadPage('./fish-problem/withedodo.html', this)">白點</a></li>
-            <!-- 影片7 -->
             <li><a href="#" onclick="loadPage('./fish-problem/fish-enteritis.html', this)">腸炎症狀和預防</a></li>
-            <!-- 影片6 -->
             <li><a href="#" onclick="loadPage('./fish-problem/determine-fish-disease.html', this)">如何判斷魚病了</a></li>
           </ul>
         </li>
+
       </ul>
     </nav>
   </aside>
@@ -162,75 +143,72 @@
       <h2>歡迎來到金魚養殖經驗交流分享</h2>
       <p>魚飼養的完整知識庫，從入門、日常操作、買魚檢疫，到飼料、設備、健康照護一應俱全。</p>
     </div>
-      <!-- 💬 LINE 社群邀請 -->
-  <section class="line-section">
-    <h2>📱 歡迎加入我們的 LINE 社群</h2>
-    <p>
-      您已被邀請加入 <strong>「金魚養殖經驗交流分享」</strong>！<br>
-      點擊下方連結或掃描 QR Code 即可加入。
-    </p>
 
-    <div style="text-align:center; margin:20px 0;">
-      <a href="https://line.me/ti/g2/VGWnjJWNVZgUaSvZPYEFN1Nqk8qtwR2N1ACmsA?utm_source=invitation&utm_medium=link_copy&utm_campaign=default"
-         target="_blank"
-         class="join-btn">👉 點我加入 LINE 社群</a>
-    </div>
+    <!-- 💬 LINE 社群邀請 -->
+    <section class="line-section">
+      <h2>📱 歡迎加入我們的 LINE 社群</h2>
+      <p>您已被邀請加入 <strong>「金魚養殖經驗交流分享」</strong>！<br>
+        點擊下方連結或掃描 QR Code 即可加入。</p>
 
-    <div style="text-align:center;">
-      <img src="https://raw.githubusercontent.com/michael19980508/index/main/image//QrCode.jpg"
-           alt="LINE 社群 QR Code"
-           style="max-width:200px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
-    </div>
-  </section>
+      <div style="text-align:center; margin:20px 0;">
+        <a href="https://line.me/ti/g2/VGWnjJWNVZgUaSvZPYEFN1Nqk8qtwR2N1ACmsA?utm_source=invitation&utm_medium=link_copy&utm_campaign=default"
+          target="_blank" class="join-btn">👉 點我加入 LINE 社群</a>
+      </div>
+
+      <div style="text-align:center;">
+        <img src="https://raw.githubusercontent.com/michael19980508/index/main/image//QrCode.jpg" alt="LINE 社群 QR Code"
+          style="max-width:200px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
+      </div>
+    </section>
 
   </main>
 
   <!-- 🪷 頁尾 -->
   <footer>
-    <p>© 2025 金魚養殖經驗交流分享社群  | 內容:金魚養殖經驗交流分享社群眾群管們  ｜ 網頁製作：MLE/p>
+    <p>© 2025 金魚養殖經驗交流分享社群 ｜ 內容:金魚養殖經驗交流分享社群眾群管們 ｜ 網頁製作：MLE</p>
   </footer>
 
   <!-- ⚙️ JS 控制 -->
   <script>
-  // 📱 手機選單開關
-  const toggleBtn = document.getElementById('menuToggle');
-  const sidebar = document.getElementById('sidebar');
-  toggleBtn.addEventListener('click', () => {
-    sidebar.classList.toggle('active');
-  });
-
-  // 📄 載入子頁面 + 高亮選單
-  function loadPage(page, el) {
-    fetch(page)
-      .then(response => {
-        if (!response.ok) throw new Error("載入失敗");
-        return response.text();
-      })
-      .then(html => {
-        document.getElementById('mainContent').innerHTML = html;
-        sidebar.classList.remove('active');
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-
-        document.querySelectorAll('.sidebar a.active').forEach(a => a.classList.remove('active'));
-        if (el) el.classList.add('active');
-      })
-      .catch(() => {
-        document.getElementById('mainContent').innerHTML = "<p>❌ 子頁面載入失敗，請稍後再試。</p>";
-      });
-  }
-
-  // 🚀 只綁定「有 onclick」的連結
-  document.querySelectorAll('.sidebar a[onclick]').forEach(a => {
-    a.addEventListener('click', e => {
-      e.preventDefault();
-      const onclick = a.getAttribute('onclick');
-      const page = onclick.match(/'([^']+)'/)?.[1];
-      if (page) loadPage(page, a);
+    // 📱 手機選單開關
+    const toggleBtn = document.getElementById('menuToggle');
+    const sidebar = document.getElementById('sidebar');
+    toggleBtn.addEventListener('click', () => {
+      sidebar.classList.toggle('active');
     });
-  });
-</script>
+
+    // 📄 載入子頁面 + 高亮選單
+    function loadPage(page, el) {
+      fetch(page)
+        .then(response => {
+          if (!response.ok) throw new Error("載入失敗");
+          return response.text();
+        })
+        .then(html => {
+          document.getElementById('mainContent').innerHTML = html;
+          sidebar.classList.remove('active');
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+
+          document.querySelectorAll('.sidebar a.active').forEach(a => a.classList.remove('active'));
+          if (el) el.classList.add('active');
+        })
+        .catch(() => {
+          document.getElementById('mainContent').innerHTML = "<p>❌ 子頁面載入失敗，請稍後再試。</p>";
+        });
+    }
+
+    // ⭐ 只有首頁才啟用「分類下拉」
+    // ⭐ 只有首頁啟用下拉
+    if (document.body.classList.contains("home")) {
+      document.querySelectorAll('.sidebar nav li > span').forEach(span => {
+        span.addEventListener('click', () => {
+          const parentLi = span.parentElement;
+          parentLi.classList.toggle('open');
+        });
+      });
+    }
+
+  </script>
 
 </body>
 </html>
-
-我要把選單個個分類變成下拉是選單
