--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <li><a href="#" onclick="loadPage('./content/daily-travel-experience.html', this)">出國回國魚缸經驗分享</a></li>
             <li><a href="#" onclick="loadPage('./content/before-travel.html', this)">出國前操作-影片</a></li>
             <li><a href="#" onclick="loadPage('./content/after-travel.html', this)">回國後操作-影片</a></li>
-            <li><a href="#" onclick="loadPage('./content/after-travel.html', this)">颱風天的養魚對應措施</a></li>
-            <li><a href="#" onclick="loadPage('./content/typhoon-coming-do.html', this)">颱風天為何禁食</a></li>
+            <li><a href="#" onclick="loadPage('./content/typhoon-coming-do.html', this)">颱風天的養魚對應措施</a></li>
+            <li><a href="#" onclick="loadPage('./content/special-typhoon-fasting.html', this)">颱風天為何禁食</a></li>
             <li><a href="#" onclick="loadPage('./content/overflow-at-home.html', this)">家庭溢流案例分享</a></li>
           </ul>
         </li>
