--- a/buyfish/do-not-Being-played-for-suckers.html
+++ b/buyfish/do-not-Being-played-for-suckers.html
@@ -6,7 +6,7 @@
   <div style="text-align:center; margin:25px 0;">
     <iframe width="90%" height="500"
             style="border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);"
-            src="https://www.youtube.com/embed/TWwO67T0FEI"
+            src="https://www.youtube.com/embed/cMfD4xkmWY4"
             title="YouTube Shorts video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
