--- a/content/typhoon-coming-do.html
+++ b/content/typhoon-coming-do.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h2>颱風天的樣於應對措施</h2>
+  <h2>颱風天的養魚應對措施</h2>
 
   <h3 style="color:#e8953c; margin-top:30px;">🎥 小影片8</h3>
   <!-- YouTube Shorts 影片 -->
