--- a/index.html
+++ b/index.html
@@ -47,15 +47,6 @@
           </ul>
         </li>
 
-        <!-- 🧰 實用好物 -->
-        <li>
-          <span>🧰 實用好物</span>
-          <ul>
-            <li><a href="#" onclick="loadPage('./iteaam/goodshit.html', this)">養金魚實用好物</a></li>
-            <li><a href="#" onclick="loadPage('./iteaam/light-mengchong.html', this)">萌蟲燈</a></li>
-          </ul>
-        </li>
-
         <!-- 🐟 日常操作 -->
         <li>
           <span>🐟 日常操作</span>
@@ -151,6 +142,33 @@
                 <li><a href="#" onclick="loadPage('./filter/filter-7ft.html', this)">七尺缸配置實例</a></li>
                 <li><a href="#" onclick="loadPage('./filter/filter-aba.html', this)">雅柏上部過濾</a></li>
             </ul>
+        </li>
+
+        <!-- 🧰 實用好物 -->
+        <li>
+          <span>🧰 魚缸設備相關</span>
+          <ul>
+            <li>設備群</li>
+            <li>底吸沉馬</li>
+            <li>金魚燈具選擇</li>
+            <li><a href="#" onclick="loadPage('./iteaam/goodshit.html', this)">養金魚實用好物</a></li>
+            <li>打氣機安裝方式</li>
+            <li>測溫器接三胞胎方式</li>
+            <li>浴室水龍頭接溫度計範例</li>
+            <li>博特沉馬接管詳解圖</li>
+            <li>博特各檔流量表/博特拆解清洗</li>
+            <li>魚呼吸沉馬分解圖</li>
+            <li>上部過濾落水管尺寸</li>
+            <li>三胞胎安裝</li>
+            <li>三胞胎注意事項</li>
+            <li>魚缸背景貼紙diy</li>
+            <li>蘋果手機魚缸拍照技巧</li>
+            <li>酷魚流量表</li>
+            <li><a href="#" onclick="loadPage('./iteaam/light-mengchong.html', this)">萌蟲燈</a></li>
+            <li>倍力生/龍門架</li>
+            <li>馬印跨燈</li>
+            <li>魚缸廠商</li>
+          </ul>
         </li>
         
         <!-- ⚠️ 魚病與健康 -->
