--- a/filter/filter-flow-principle.html
+++ b/filter/filter-flow-principle.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h2>💧 過濾與濾材水流原理 & 水流導向</h2>
+  <h2>💧 過濾與濾材水流原理</h2>
   
   <div class="section yellow">
     <h3 style="color:#e8953c; margin-top:30px;">🎥 過濾與濾材水流原理</h3>
@@ -14,18 +14,7 @@
               style="border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
       </iframe>
     </div>
-  </div>
    
-
-  <div class="section blue">
-    <h3 style="color:#e8953c; margin-top:30px;">📸 水流導向</h3>
-    <!-- 📸 示意圖片 -->
-    <div style="display:flex; justify-content:center; margin:25px 0;">
-      <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/水流導向.jpg"
-           alt="過濾與水流導向示意圖"
-           loading="lazy"
-           style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
-    </div>
       <p style="text-align:center; font-weight:bold; color:#0284c7; margin-top:25px;">
       💧 沒事多換水，多換水沒事 💧
     </p>
