--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <span>🧰 魚缸設備相關</span>
           <ul>
             <li>設備群</li>
-            <li>底吸沉馬</li>
+            <li><a href="#" onclick="loadPage('./iteaam/submersible-motor.html', this)">底吸沉馬</a></li>
             <li>金魚燈具選擇</li>
             <li><a href="#" onclick="loadPage('./iteaam/goodshit.html', this)">養金魚實用好物</a></li>
             <li>打氣機安裝方式</li>
