--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <ul>
             <li>設備群</li>
             <li><a href="#" onclick="loadPage('./iteaam/submersible-motor.html', this)">底吸沉馬</a></li>
-            <li>金魚燈具選擇</li>
+            <li><a href="#" onclick="loadPage('./knowledge/light-guide.html', this)">金魚燈具選擇</a></li>
             <li><a href="#" onclick="loadPage('./iteaam/goodshit.html', this)">養金魚實用好物</a></li>
             <li>打氣機安裝方式</li>
             <li>測溫器接三胞胎方式</li>
