--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
           <span>🧰 魚缸設備相關</span>
           <ul>
             <li>設備群</li>
-            <li><a href="#" onclick="loadPage('./iteaam/submersible-motor.html', this)">底吸沉馬</a></li>
+            <li><a href="#" onclick="loadPage('./iteam/submersible-motor.html', this)">底吸沉馬</a></li>
             <li><a href="#" onclick="loadPage('./knowledge/light-guide.html', this)">金魚燈具選擇</a></li>
-            <li><a href="#" onclick="loadPage('./iteaam/goodshit.html', this)">養金魚實用好物</a></li>
-            <li><a href="#" onclick="loadPage('./iteaam/airpump-install.html', this)">打氣機安裝方式</a></li>
-            <li><a href="#" onclick="loadPage('./iteaam/thermometer-3way.html', this)">測溫器接三胞胎方式</a></li>
-            <li><a href="#" onclick="loadPage('./iteaam/bathroom-mode.html', this)">浴室水龍頭接溫度計範例</a></li>
+            <li><a href="#" onclick="loadPage('./iteam/goodshit.html', this)">養金魚實用好物</a></li>
+            <li><a href="#" onclick="loadPage('./iteam/airpump-install.html', this)">打氣機安裝方式</a></li>
+            <li><a href="#" onclick="loadPage('./iteam/thermometer-3way.html', this)">測溫器接三胞胎方式</a></li>
+            <li><a href="#" onclick="loadPage('./iteam/bathroom-mode.html', this)">浴室水龍頭接溫度計範例</a></li>
             <li>博特沉馬接管詳解圖</li>
             <li>博特各檔流量表/博特拆解清洗</li>
             <li>魚呼吸沉馬分解圖</li>
