--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <li><a href="#" onclick="loadPage('./iteam/airpump-install.html', this)">打氣機安裝方式</a></li>
             <li><a href="#" onclick="loadPage('./iteam/thermometer-3way.html', this)">測溫器接三胞胎方式</a></li>
             <li><a href="#" onclick="loadPage('./iteam/bathroom-mode.html', this)">浴室水龍頭接溫度計範例</a></li>
-            <li>博特沉馬接管詳解圖</li>
+            <li><a href="#" onclick="loadPage('./iteam/bot-pump-connection.html', this)">博特沉馬接管詳解圖</a></li>
             <li>博特各檔流量表/博特拆解清洗</li>
             <li>魚呼吸沉馬分解圖</li>
             <li>上部過濾落水管尺寸</li>
