--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <li><a href="#" onclick="loadPage('./iteam/top-filter-pipe-size.html', this)">上部過濾落水管尺寸</a></li>
             <li><a href="#" onclick="loadPage('./iteam/triple-filter-install.html', this)">三胞胎安裝</a></li>
             <li><a href="#" onclick="loadPage('./iteam/triple-filter-notes.html', this)">三胞胎注意事項</a></li>
-            <li>魚缸背景貼紙diy</li>
+            <li><a href="#" onclick="loadPage('./iteam/tank-background-diy.html', this)">魚缸背景貼紙diy</a></li>
             <li>蘋果手機魚缸拍照技巧</li>
             <li>酷魚流量表</li>
             <li><a href="#" onclick="loadPage('./iteam/light-mengchong.html', this)">萌蟲燈</a></li>
