--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <li><a href="#" onclick="loadPage('./iteam/triple-filter-notes.html', this)">三胞胎注意事項</a></li>
             <li><a href="#" onclick="loadPage('./iteam/tank-background-diy.html', this)">魚缸背景貼紙diy</a></li>
             <li><a href="#" onclick="loadPage('./iteam/iphone-tank-photo-tips.html', this)">蘋果手機魚缸拍照技巧</a></li>
-            <li>酷魚流量表</li>
+            <li><a href="#" onclick="loadPage('./iteam/coolfish-bump-flow.html', this)">酷魚流量表</a></li>
             <li><a href="#" onclick="loadPage('./iteam/light-mengchong.html', this)">萌蟲燈</a></li>
             <li>倍力生/龍門架</li>
             <li>馬印跨燈</li>
