--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <li><a href="#" onclick="loadPage('./iteam/iphone-tank-photo-tips.html', this)">蘋果手機魚缸拍照技巧</a></li>
             <li><a href="#" onclick="loadPage('./iteam/coolfish-bump-flow.html', this)">酷魚流量表</a></li>
             <li><a href="#" onclick="loadPage('./iteam/light-mengchong.html', this)">萌蟲燈</a></li>
-            <li>倍力生/龍門架</li>
+            <li><a href="#" onclick="loadPage('./iteam/light-frame-beilisheng.html', this)">倍力生/龍門架</a></li>
             <li>馬印跨燈</li>
             <li>魚缸廠商</li>
           </ul>
