--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <li>魚缸水體換算</li>
             <li><a href="#" onclick="loadPage('./iteam/thermometer-3way.html', this)">測溫器接三胞胎方式</a></li>
             <li><a href="#" onclick="loadPage('./iteam/bathroom-mode.html', this)">浴室水龍頭接溫度計範例</a></li>
-            <li>魚缸對應沉馬</li>
+            <li><a href="#" onclick="loadPage('./iteam/pump-reference.html', this)">魚缸對應沉馬</a></li>
             <li><a href="#" onclick="loadPage('./iteam/water-flow-guide.html', this)">魚缸水流導向</a></li>
             <li><a href="#" onclick="loadPage('./iteam/bot-pump-connection.html', this)">博特沉馬接管詳解圖</a></li>
             <li><a href="#" onclick="loadPage('./iteam/bot-flow-and-clean.html', this)">博特各檔流量表/博特拆解清洗</a></li>
